changed static core

--- a/flaskapp/templates/foundation/onecol.html
+++ b/flaskapp/templates/foundation/onecol.html
@@ -8,7 +8,7 @@
     <title>{{ title }}</title>
     
     <link rel="stylesheet" href="{{ url_for('static', filename='foundation/css/foundation.css') }}" />
-    <script src="{{ url_for('static', filename='foundation/js/vendor/modernizr.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vendor/modernizr.js') }}"></script>
   </head>
   
   <body>
@@ -39,8 +39,8 @@
       </div>
     </footer>
     
-    <script src="{{ url_for('static', filename='foundation/js/vendor/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='foundation/js/foundation.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/foundation/foundation.min.js') }}"></script>
     <script>
       $(document).foundation();
     </script>
