--- a/flaskapp/templates/foundation/default.html
+++ b/flaskapp/templates/foundation/default.html
@@ -6,7 +6,7 @@
     <title>{{ title }}</title>
  
    <link rel="stylesheet" href="{{ url_for('static', filename='foundation/css/foundation.css') }}" />
-    <script src="{{ url_for('static', filename='foundation/js/vendor/modernizr.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/vendor/modernizr.js') }}"></script>
 
   </head>
   <body>
@@ -159,8 +159,8 @@
       </div>
     </div>
     
-      <script src="{{ url_for('static', filename='foundation/js/vendor/jquery.js') }}"></script>
-    <script src="{{ url_for('static', filename='foundation/js/foundation.min.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/jquery/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/foundation/foundation.min.js') }}"></script>
 
     <script>
       $(document).foundation();
