--- a/flaskapp/templates/foundation/onecol.html
+++ b/flaskapp/templates/foundation/onecol.html
@@ -25,7 +25,9 @@
       <div class="row">
       <div class="panel">
         <div class="large-12 columns">
-          <p>Middle Content goes here.... </p>
+          {% block middle %}
+            This is default middle
+          {% endblock %}
         </div>
       </div>
       </div>
