--- a/flaskapp/templates/theme/about.html
+++ b/flaskapp/templates/theme/about.html
@@ -4,6 +4,7 @@
 	{% block content %}
 	<P> This is the middle content bitches </P>
 	{% endblock content %}
+	<P class="panel callout radius">You wanted this page: {{path}} </P>
 {% endblock middle %}
 
 	
