--- a/flaskapp/templates/theme/about.html
+++ b/flaskapp/templates/theme/about.html
@@ -2,7 +2,7 @@
 
 {% block middle %}
 	{% block content %}
-	<P> This is the middle content bitches </P>
+	<P> This is the middle content bitches. </P>
 	{% endblock content %}
 	<P class="panel callout radius">You wanted this page: {{path}} </P>
 {% endblock middle %}
